# rust

./: .gitignore
actix/requests/: echo.zsh
aws-dynamodb/: Cargo.toml
aws-dynamodb/src/: main.rs
calculator/src/: main.rs
email/: .env.example  Cargo.toml  config.toml
email/src/: args.rs  mailgun.rs  main.rs
image-combiner/src/: args.rs  main.rs
openSSL/: Cargo.toml  hello.txt  key.pem
openSSL/src/: args.rs  main.rs
ownership/src/: main.rs  takes_ownership_1.rs
poo/: Cargo.toml
poo/src/: main.rs
postgres-driver/: .gitignore  Cargo.toml  docker-compose.yml
postgres-driver/queries/: list.sql  seed.sql
postgres-driver/src/: list.rs  seed.rs  utils.rs
tcp-server/: http-get.zsh  http-post.zsh
tcp-server/html/: 404.html  index.html
tcp-server/src/: main.rs
traits/src/: lib.rs  main.rs
vectors/src/: main.rs
weather/: Cargo.toml
weather/src/: main.rs
