[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitfailure = "0.5.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.25.0", features = ["full"] }
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.93"
structopt = "0.3.26"
